+ show description button in play detail z-index fix for mobile layout displaying

--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -18,6 +18,7 @@
     /* border-right: 1px solid black;*/
     transition: all 0.6s ease;
     box-shadow: 1px 1px 40px 10px blueviolet;
+    z-index: 99;
 }
 
 /* Стили навбара */
